--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "vite",
+        "build": "vite build",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -14,9 +15,11 @@
         "axios": "^0.25",
         "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.56.1"
+        "sass": "^1.56.1",
+        "vite": "^5.0.10"
     },
     "dependencies": {
         "resolve-url-loader": "^5.0.0"
